--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
 	<br>
 	<h3 class="text-center">Please leave your name and a meaningful quote.</h3>
 	<div class="text-center center-block">
-		<form id="guestbook-form">
+		<form id="quotester-form">
 			<label>Name</label><br>
 			<input type="text" id="name-input"/><br>
 			<label>Quote</label><br>
