--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="./public/styles.css">
 </head>
 <body>
-	<h1 class="text-center">"QUOTESTER"</h1>
+	<h1 class="text-left">"QUOTESTER"</h1>
 	<br>
 	<h3 class="text-center">Please leave your name and a meaningful quote.</h3>
 	<div class="text-center center-block">
