--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,10 @@
 	<h3 class="text-center">Please leave your name and a meaningful quote.</h3>
 	<div class="text-center center-block">
 		<form id="quotester-form">
-			<label>Name</label><br>
-			<input type="text" id="name-input"/><br>
-			<label>Quote</label><br>
-			<textarea id="quote-input"></textarea>
+			<label class="nameLabel">Name</label><br>
+			<input type="text" id="name-input" class="name_input"/><br>
+			<label class="quoteLabel">Quote</label><br>
+			<textarea id="quote-input" class="textArea" placeholder="Type a quote here">" "</textarea>
 			<br>
 			<input class="btn btn-secondary" id="submit-this" type="submit">
 		</form>
