--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,19 +12,19 @@
 	<div class="text-center center-block">
 		<form id="quotester-form">
 			<label class="nameLabel">Name</label><br>
-			<input type="text" id="name-input" class="name_input"/><br>
+			<input type="text" id="name-input" style="font-size: 25px" class="name_input" /><br>
 			<label class="quoteLabel">Quote</label><br>
-			<textarea id="quote-input" class="textArea" placeholder="Type a quote here">" "</textarea>
+			<textarea id="quote-input" class="textArea" placeholder="Type a quote here" style="font-size: 25px">" "</textarea>
 			<br>
 			<input class="btn btn-secondary" id="submit-this" type="submit">
 		</form>
 	</div>
-	<div id="main-container"></div>
+	<div id="main-container" class="modal-container"></div>
 	<div id = "update-quote-modal" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content text-center">
 				<div class="modal-header">
-					<h2>Update Quote</h2>
+					<h2>Update Your Quote</h2>
 				</div>
 				<div class="modal-body"></div>
 				<div class="modal-footer"></div>
