css updates to header and h4 styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="./public/styles.css">
 </head>
 <body>
-	<h1 class="text-left">"QUOTESTER"</h1>
+	<h1 class="text-left">"QUOTESTER"<span class="spanHeaderTag"> - The home for your quotes -</span></h1>
 	<br>
 	<h3 class="text-center">Please leave your name and a meaningful quote.</h3>
 	<div class="text-center center-block">
@@ -18,6 +18,7 @@
 			<br>
 			<input class="btn btn-secondary" id="submit-this" type="submit">
 		</form>
+	<h4 class="scrollDown"> - Scroll down to see more great quotes! - </h4>
 	</div>
 	<div id="main-container" class="modal-container"></div>
 	<div id = "update-quote-modal" class="modal fade" role="dialog">
