added google fonts link

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>"QUOTESTER"</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Hairline" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./public/styles.css">
 </head>
 <body>
